<?xml version="1.0"?>
<package format="3">
  <name>line_module_b_controler</name>
  <version>0.0.1</version>
  <description>B模组控制服务</description>

  <maintainer email="your_email@example.com">ccj</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>pymodbus</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
